[package]
name = "design-system-docs"
version = "0.0.1"
authors = ["r3p0x <svreiser@gmail.com>", "huhn <huhn.dev@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
css-in-rust = { version = "0.4.1", features = ["yew_integration"] }
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
yew-router = {version="0.14", features = ["web_sys"] }

design-system = { path = "./crate/design-system" }

pulldown-cmark = "0.6.1"


[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
